Update DirectoryModDiscovery